# deepseek-engineer

./: README.md  concrete-implementation-plan.md  note.md  pyproject.toml
.github/workflows/: ci.yml
dev/benchmarks/: benchmark_framework.py  core_benchmarks.py  run_benchmarks.py
dev/docs/: README.md  You are a retired elite software develop.md  advanced-llm-features.md  api-integration.md  appearance-customization.md  architecture.md  components.md  deepseek-integration.md  deployment-guide.md  developer-roadmap.md  development-guide.md  file-operations.md  litellm-integration.md  llm-configuration.md  logging-and-monitoring.md  mcp-best-practices.md  mcp-implementation.md  mcp-plugin-system.md  mcp-specification.md  plugin-development-guide.md  troubleshooting-guide.md
old-rawdog-docs/: 01_Overview.md  02_RAWDOG_Architecture.md  03_MCP_Integration_Guide.md  04_Creating_MCP_Servers.md  05_MCP_Best_Practices.md  06_RAWDOG_MCP_Integration.md  07_MCP_Server_Discovery.md  08_MCP_LLM_Configuration.md  09_Advanced_LLM_Features.md  10_Jina_AI_Integration.md  11_Deepseek_Integration.md  13_Model_Configuration.md  14_Provider_Implementation.md  15_Logging_And_Monitoring.md  16_MCP_Specification.md
src/deepseek_engineer/: __init__.py  app.py  main.py
src/deepseek_engineer/core/: api_client.py  conversation_manager.py  file_manager.py  monitoring.py  security_manager.py
src/deepseek_engineer/mcp/: __init__.py  base.py  config.py  loader.py  manager.py  registry.py
tests/: test_api_client.py  test_app.py  test_conversation_manager.py  test_file_manager.py  test_main.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_plugins.py  test_mcp_registry.py  test_monitoring.py  test_security_manager.py
