[project]
name = "deepseek-engineer"
version = "0.1.0"
description = "Advanced software development assistant powered by DeepSeek"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DeepSeek Engineer Team" }
]
dependencies = [
    "openai>=1.58.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tiktoken>=0.6.0",
    "psutil>=5.9.8",
    "typing-extensions>=4.9.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "pytest-mock>=3.12.0"
]
dev = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepseek_engineer"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=deepseek_engineer"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["deepseek_engineer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[project.scripts]
deepseek = "deepseek_engineer.main:main"

[project.urls]
Homepage = "https://github.com/deepseek/deepseek-engineer"
Documentation = "https://docs.deepseek.ai/engineer"
Repository = "https://github.com/deepseek/deepseek-engineer.git"
Changelog = "https://github.com/deepseek/deepseek-engineer/blob/main/CHANGELOG.md"
